--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -29,6 +29,7 @@ $borderViolet: #2d1940;
 $borderViolet10: #2d19401a;
 $borderViolet15: #2d194026;
 $borderViolet40: #2d194066;
+$borderBreadcrumbs: rgba(246,245,247,.2);
 
 // Transitions
 $transition: .25s;
