--- a/src/pages/prodvizhenie.pug
+++ b/src/pages/prodvizhenie.pug
@@ -18,7 +18,7 @@
         
             +SectionHero(
                 'Превращаем SEO в&nbsp;стабильный канал привлечения клиентов',
-                'Продвигаем сайты только по&nbsp;важным запросам для бизнеса.<br> Чтобы к&nbsp;вам приходили люди, которым точно интересно ваше предложение.',
+                'Продвигаем сайты только по&nbsp;важным запросам для бизнеса. Чтобы к&nbsp;вам приходили люди, которым точно интересно ваше предложение.',
                 {
                     breadcrumbs: [
                         {
