--- a/src/pages/sozdanie.pug
+++ b/src/pages/sozdanie.pug
@@ -137,7 +137,7 @@
                 }
             })
 
-            +SectionReviews
+            +SectionReviews(true)
 
             +SectionAdditional({
                 title: 'Вместе с сайтом вам&nbsp;пригодится',
