--- a/src/sections/additional/additional.pug
+++ b/src/sections/additional/additional.pug
@@ -2,7 +2,7 @@ mixin SectionAdditional(data)
     section.section.additional
         .container 
             .row
-                .col-xs-12
+                .col-xxl-6.col-lg-10.col-xs-12
                     .section__header
                         .section__title.title.title--h2!= data.title
                         if data.description
