--- a/src/sections/blog/blog.pug
+++ b/src/sections/blog/blog.pug
@@ -11,9 +11,9 @@ mixin SectionBlog()
                             | написаны на&nbsp;основе нашего опыта и&nbsp;имеют практическую 
                             | ценность. Чтобы не&nbsp;пропустить очередную статью, 
                             | подписывайтесь на&nbsp;обновления.
-                        a.section__link.link.link--uppercase.link--right(href="/blog") 
+                        a.section__link.link.link--uppercase(href="/blog") 
                             span.link__text Перейти в блог
-                            <svg class="link__icon" width="12" height="13" xmlns="http://www.w3.org/2000/svg"><path d="m1.227 6.15 3.915 3.675V.63h1.5v9.195l3.915-3.675h.975v1.065l-5.64 5.445-5.64-5.445V6.15h.975Z"></path></svg>
+                            span.link__icon →
             .blog__list.row.no-gutters
                 a.blog__item(href="#0")
                     article
