--- a/src/sections/cooperation/cooperation.pug
+++ b/src/sections/cooperation/cooperation.pug
@@ -25,3 +25,13 @@ mixin SectionCooperation(data)
                                                         if type.text
                                                             .cooperation__slide-type-text.text.text--note!= type.text
                         .swiper-pagination
+                        .cooperation__arrow.cooperation__prev
+                            .arrow 
+                                <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                </svg>
+                        .cooperation__arrow.cooperation__next
+                            .arrow 
+                                <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                </svg>
