--- a/src/sections/guarantee/guarantee.scss
+++ b/src/sections/guarantee/guarantee.scss
@@ -62,7 +62,7 @@
             padding: 75px 30px 60px;
             z-index: 1;
             @media (min-width: 768px) {
-                padding-bottom: 180px;
+                padding: 75px 45px 180px;
             }
             @media (min-width: 992px) {
                 padding: 75px 80px 180px;
