--- a/src/sections/helpfull/helpfull.pug
+++ b/src/sections/helpfull/helpfull.pug
@@ -8,10 +8,10 @@ mixin SectionHelpfull()
                             .section__header
                                 .section__title.title.title--h2 Кому мы полезны 
                                 p.section__text.text.text--lead Всем, кому важно полностью закрыть SEO&nbsp;-&nbsp;направление. Мы&nbsp;берем на&nbsp;себя всю SEO&nbsp;-&nbsp;рутину: готовим план продвижения с&nbsp;объемом задач, сроками и&nbsp;условиями достижения результата, проводим комплекс работ, измеряем эффективность и&nbsp;отвечаем на&nbsp;любые вопросы. Получается почти как штатный сеошник.
-                        p.helpfull__footer.title.title--item 
-                            | Хотите увидеть результаты наших клиентов? 
-                            | Примеры SEO-кейсов покажем по&nbsp;запросу. 
-                            | Пишите на&nbsp;<a href="mailto:hello@mainbit.ru">hello@mainbit.ru</a>
+                        .helpfull__footer.title.title--item 
+                            p.helpfull__footer-text Хотите увидеть результаты наших клиентов?
+                            p.helpfull__footer-text Примеры SEO-кейсов покажем по&nbsp;запросу.
+                            p.helpfull__footer-text Пишите на&nbsp;<a href="mailto:hello@mainbit.ru">hello@mainbit.ru</a>
                 .helpfull__lead.col-xl-5.col-xs-12.ml-xxl-n2.ml-xl-n3
                     .lead-block
                         .lead-block__content
