--- a/src/sections/portfolio/portfolio.pug
+++ b/src/sections/portfolio/portfolio.pug
@@ -9,9 +9,9 @@ mixin SectionPortfolio
                             | В&nbsp;портфолио собраны далеко не&nbsp;все выполненные нами проекты. 
                             | Однако представленные работы помогут предварительно, до&nbsp;обсуждения 
                             | конкретной задачи, оценить уровень экспертизы и&nbsp;разносторонность нашего опыта.
-                        a.section__link.link.link--uppercase.link--right(href="/portfolio") 
+                        a.section__link.link.link--uppercase(href="/portfolio") 
                             span.link__text Посмотреть все работы
-                            <svg class="link__icon" width="12" height="13" xmlns="http://www.w3.org/2000/svg"><path d="m1.227 6.15 3.915 3.675V.63h1.5v9.195l3.915-3.675h.975v1.065l-5.64 5.445-5.64-5.445V6.15h.975Z"></path></svg>
+                            span.link__icon →
             .row.portfolio__list
                 .portfolio__item.col-md-6.col
                     a.portfolio__link(href="#0") 
