--- a/src/sections/prices/prices.scss
+++ b/src/sections/prices/prices.scss
@@ -1,4 +1,8 @@
 .prices {
+    padding-top: 30px;
+    @media (min-width: 768px) {
+        padding-top: 75px;
+    }
     &__row {
         align-items: center;
     }
