--- a/src/components/lead-block/lead-block.scss
+++ b/src/components/lead-block/lead-block.scss
@@ -5,10 +5,10 @@
     @media (min-width: 768px) {
         padding: 45px;
     }
-    @media (min-width: 992px) {
+    @media (min-width: 1200px) {
         padding: 75px 45px;
     }
-    @media (min-width: 1200px) {
+    @media (min-width: 1920px) {
         padding: 75px 60px;
     }
     &--light {
@@ -21,9 +21,12 @@
         }
     }
     &__title {
-        margin-bottom: 20px;
+        margin-bottom: 30px;
+        font-size: 24px;
+        line-height: 1.416;
         @media (min-width: 768px) {
-            margin-bottom: 30px;
+            font-size: 30px;
+            line-height: 1.33;
         }
     }
     &__text {
