--- a/src/sections/leadForm/leadForm.scss
+++ b/src/sections/leadForm/leadForm.scss
@@ -1,3 +1,9 @@
+.section + .leadForm {
+    @media (max-width: 767px) {
+        padding-top: 30px;
+    }
+}
+
 .leadForm {
     padding-bottom: 90px;
     @media (min-width: 576px) {
@@ -143,6 +149,9 @@
         padding-top: 45px;
         @media (min-width: 768px) {
             padding-top: 60px;
+        }
+        &-name {
+            margin-bottom: 5px;
         }
         &-list {
             display: flex;
